--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries en CSS - Presentación</title>
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./public/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="public/css/style.css">
     
 </head>
@@ -314,8 +315,8 @@
     </div>
 
     <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="./public/vendor/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.getElementById('currentDate').textContent = new Date().toLocaleDateString('es-ES', {
             year: 'numeric',
@@ -333,6 +334,7 @@
             });
         });
     </script>
+
 </body>
 </html>
 
