--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 </head>
 <body>
 
-    <!-- ========================================================= -->
-    <!-- ======================= HEADER ========================== -->
-    <!-- ========================================================= -->
 
     <header class="container-fluid">
         <section class="hero-section">
@@ -40,16 +37,13 @@
     </header>
 
 
-    <!-- ========================================================= -->
-    <!-- ======================== MAIN =========================== -->
-    <!-- ========================================================= -->
 
     <main class="container my-4">
 
         <div class="row">
             <div class="col-lg-12">
 
-                <!-- ¿Qué son las Media Queries? -->
+                <!-- que son -->
                 <div class="card feature-card mb-4">
                     <div class="card-body">
                         <h2 class="card-title text-primary mb-4">
@@ -82,7 +76,7 @@
                     </div>
                 </div>
 
-                <!-- Sintaxis Básica -->
+                <!-- sintaxis basicas -->
                 <div class="card feature-card mb-4">
                     <div class="card-body">
                         <h2 class="card-title text-primary mb-4">
@@ -124,7 +118,7 @@
                     </div>
                 </div>
 
-                <!-- Ejemplos Prácticos -->
+                <!-- ejemplos-->
                 <div class="card feature-card mb-4">
                     <div class="card-body">
                         <h2 class="card-title text-primary mb-4">
@@ -195,7 +189,7 @@
                     </div>
                 </div>
 
-                <!-- Beneficios -->
+                <!-- beneficios -->
                 <div class="card feature-card mb-4">
                     <div class="card-body">
                         <h2 class="card-title text-primary mb-4">
@@ -234,7 +228,7 @@
                     </div>
                 </div>
 
-                <!-- Buenas Prácticas -->
+                <!-- buena practica -->
                 <div class="card feature-card mb-4">
                     <div class="card-body">
                         <h2 class="card-title text-primary mb-4">
@@ -277,7 +271,7 @@
                     </div>
                 </div>
 
-                <!-- Demostración -->
+                <!-- demostracion -->
                 <div class="demo-area">
                     <h2 class="text-primary mb-4">
                         <i class="bi bi-controller me-2"></i> Demostración Práctica
@@ -317,11 +311,6 @@
             </div>
         </div>
     </main>
-
-
-    <!-- ========================================================= -->
-    <!-- ======================= FOOTER ========================== -->
-    <!-- ========================================================= -->
 
     <footer class="bg-dark text-light py-4 mt-5">
         <div class="container">
